--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Dev Previsão Tempo</title>
 </head>
-<body>
-    
-    <input>
-    <button>Buscar</button>
 
-    <h2>Tempo em Rio de Janeiro</h2>
-    <p>28°C</p>
-    
-    <p>Nuvens Dispersas</p>
-    <P>Umidade: 70%</P>
+<body>
+
+    <div>
+        <input>
+        <button>Buscar</button>
+
+        <h2>Tempo em Rio de Janeiro</h2>
+        <p>28°C</p>
+
+        <p>Nuvens Dispersas</p>
+        <P>Umidade: 70%</P>
+    </div>
+
 </body>
+
 </html>
