--- a/index.html
+++ b/index.html
@@ -5,20 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <title>Dev Previsão Tempo</title>
 </head>
 
 <body>
 
-    <div>
-        <input>
-        <button>Buscar</button>
+    <div class="caixa-maior">
+        <input placeholder="Digite o nome da cidade">
+        <button>
+            <img class="lupa" src="https://www.svgrepo.com/show/488200/find.svg">
+        </button>
 
-        <h2>Tempo em Rio de Janeiro</h2>
-        <p>28°C</p>
+        <div class="caixa-media">
+            <h2>Tempo em Rio de Janeiro</h2>
+            <p class="temp">28°C</p>
 
-        <p>Nuvens Dispersas</p>
-        <P>Umidade: 70%</P>
+            <p class="descricao">Nuvens Dispersas</p>
+            <P class="umidade">Umidade: 70%</P>
+        </div>
+
     </div>
 
 </body>
